--- a/app/src/main/res/layout/dialog_chat_full_screen_image.xml
+++ b/app/src/main/res/layout/dialog_chat_full_screen_image.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 30.03.20 21:02
+  ~ Last modified 31.03.20 16:12
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -29,7 +29,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:adjustViewBounds="true"
-			android:scaleType="fitCenter"
+			android:scaleType="centerInside"
 
 			app:bindImageUrl="@{photoUrl}"
 			app:progressBar="@{pbImageLoading}"
