--- a/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 30.03.20 21:02
+  ~ Last modified 31.03.20 16:34
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -37,7 +37,7 @@
 				android:layout_height="match_parent"
 				android:layout_width="match_parent"
 				android:layout_gravity="center"
-				android:scaleType="centerCrop"
+				android:scaleType="center"
 
 				app:bindImageUrl="@{bindItem.fileUrl}"
 				android:contentDescription="@string/description_user_photo" />
