--- a/app/src/main/res/layout/fragment_chat_item_right.xml
+++ b/app/src/main/res/layout/fragment_chat_item_right.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 31.03.20 16:36
+  ~ Last modified 01.04.20 18:04
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -42,6 +42,7 @@
 			android:id="@+id/tvChatMessageText"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_gravity="end"
 			android:padding="12dp"
 			android:text="@string/default_message_text"
 			android:textIsSelectable="true"
