--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 30.03.20 21:02
+  ~ Last modified 02.04.20 15:43
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -134,7 +134,7 @@
 					android:layout_height="wrap_content"
 					android:padding="@dimen/general_size_16dp"
 
-					android:text="@string/want_to_go_text"
+					android:text="@string/place_detailed_want_to_go_text"
 					android:textSize="24sp"
 					style="@style/medium_text"
 
