--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 07.04.20 17:55
+  ~ Last modified 07.04.20 17:58
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -62,7 +62,7 @@
 					android:maxLines="1"
 					android:singleLine="true"
 
-					android:text='@{viewModel.partnerName.split(" ")[0]}'
+					android:text='@{viewModel.partnerName}'
 					android:textSize="20sp"
 					style="@style/regular_text"
 
