--- a/app/src/main/res/layout/fragment_places_page_rv_item.xml
+++ b/app/src/main/res/layout/fragment_places_page_rv_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 30.03.20 21:02
+  ~ Last modified 09.04.20 16:24
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -42,12 +42,10 @@
 
 		<ProgressBar
 			android:id="@+id/pbImageLoading"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_width="64dp"
+			android:layout_height="64dp"
 			android:layout_gravity="center"
 			android:indeterminate="false"
-			android:minHeight="32dp"
-			android:minWidth="32dp"
 			android:max="100"
 			android:progressDrawable="@drawable/progress_drawable"
 
