--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 12.04.20 14:55
+  ~ Last modified 30.12.20 21:52
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -9,56 +9,17 @@
   -->
 
 <resources>
-
-	<!-- Base application theme. -->
-	<style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-		<!-- BASE THEME COLOR your theme here. -->
-		<item name="colorPrimary">@color/colorPrimary</item>
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name="colorPrimaryVariant">@color/colorPrimaryLight</item>
-		<item name="colorOnPrimary">@color/colorOnPrimary</item>
-
-		<item name="colorSecondary">@color/colorSecondary</item>
-		<item name="colorSecondaryVariant">@color/colorSecondaryLight</item>
-		<item name="colorOnSecondary">@color/colorOnSecondary</item>
-
-		<item name="colorError">@color/colorError</item>
-		<item name="colorOnError">@color/colorOnError</item>
-
-		<item name="colorSurface">@color/colorSurface</item>
-		<item name="colorOnSurface">@color/colorOnSurface</item>
-
-		<item name="android:colorBackground">@color/black</item>
-		<item name="colorOnBackground">@color/white</item>
-
-		<item name="android:textColor">@color/white</item>
-
-		<!-- display menu popup under toolbar -->
-		<item name="actionOverflowMenuStyle">@style/MyOverFlowMenuStyle</item>
-
-<!--		<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
-<!--		<item name="android:windowTranslucentStatus">true</item>-->
-<!--		<item name="android:windowTranslucentNavigation">true</item>-->
-
-		<item name="android:navigationBarColor">@color/black_1</item>
-		<item name="android:statusBarColor">@color/black_1</item>
-		<item name="android:windowBackground">@null</item>
-
-		<item name="materialAlertDialogTheme">@style/MyMaterialAlertDialog</item>
-
-		<item name="shapeAppearanceSmallComponent">@style/MyAppShapeAppearance.SmallComponent</item>
-		<item name="shapeAppearanceMediumComponent">@style/MyAppShapeAppearance.MediumComponent</item>
-		<item name="shapeAppearanceLargeComponent">@style/MyAppShapeAppearance.LargeComponent</item>
-
+	
+	<style name="My.Widget.TextView" parent="@style/Widget.MaterialComponents.TextView">
+		<item name="android:textAppearance">@style/My.TA.Body1</item>
 	</style>
-
+	
 	<!-- provided by theme settings vert dots style -->
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 	<!-- custom appearance pop up menu items -->
 	<style name="MyMenuPopupStyle" parent="Widget.AppCompat.PopupMenu">
 		<item name="android:itemBackground">@color/colorPrimary</item>
-		<item name="android:itemTextAppearance">@style/regular_text</item>
 	</style>
 
 	<!-- display menu popup under toolbar -->
@@ -70,22 +31,8 @@
 
 	<!-- Alert dialog style	-->
 	<style name="MyMaterialAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
-		<item name="materialAlertDialogTitleTextStyle">@style/MyMaterialAlertDialog.Title</item>
-		<item name="materialAlertDialogBodyTextStyle">@style/MyMaterialAlertDialog.Body</item>
 		<item name="buttonBarPositiveButtonStyle">@style/MyMaterialAlertDialog.ButtonPositive</item>
 		<item name="buttonBarNegativeButtonStyle">@style/MyMaterialAlertDialog.ButtonNegative</item>
-	</style>
-
-	<style name="MyMaterialAlertDialog.Title" parent="MaterialAlertDialog.MaterialComponents.Title.Text">
-		<item name="android:fontFamily">@font/rubik_bold</item>
-		<item name="android:textColor">@color/white</item>
-		<item name="android:textSize">20sp</item>
-	</style>
-
-	<style name="MyMaterialAlertDialog.Body">
-		<item name="android:fontFamily">@font/rubik_light</item>
-		<item name="android:textColor">@color/white</item>
-		<item name="android:textSize">14sp</item>
 	</style>
 
 	<style name="MyMaterialAlertDialog.ButtonPositive" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -103,38 +50,6 @@
 		<item name="android:textAllCaps">false</item>
 		<item name="android:textSize">14sp</item>
 		<item name="rippleColor">@color/lolite</item>
-	</style>
-
-	<style name="FullScreenDialog" parent="Theme.AppCompat.Dialog">
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name="colorPrimary">@color/colorPrimary</item>
-
-		<!-- Set this to true if you want Full Screen without status bar -->
-		<item name="android:windowFullscreen">true</item>
-
-		<item name="android:windowIsFloating">false</item>
-
-		<item name="android:windowNoTitle">true</item>
-		<!-- This is important! Don't forget to set window background -->
-		<item name="android:windowBackground">@color/colorPrimaryDark</item>
-
-	</style>
-
-	<style name="MyAppShapeAppearance.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
-		<item name="cornerSize">8dp</item>
-	</style>
-
-	<style name="MyAppShapeAppearance.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
-		<item name="cornerSize">8dp</item>
-	</style>
-
-	<style name="MyAppShapeAppearance.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
-		<item name="cornerSize">8dp</item>
-	</style>
-
-	<style name="MyAppShapeAppearanceOverlay.Button.Rounded" parent="">
-		<item name="cornerFamily">rounded</item>
-		<item name="cornerSize">50%</item>
 	</style>
 
 	<style name="MyMaterialIconButton" parent="Widget.MaterialComponents.Button.TextButton">
@@ -184,36 +99,6 @@
 	<style name="ToolbarTitle" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textSize">20sp</item>
-	</style>
-
-
-	<!-- header text -->
-	<style name="header_text" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_medium</item>
-		<item name="android:padding">@dimen/general_size_16dp</item>
-		<item name="android:textSize">24sp</item>
-
-	</style>
-
-	<!-- general text styles -->
-	<style name="bold_text" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_bold</item>
-
-	</style>
-
-	<style name="medium_text" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_medium</item>
-
-	</style>
-
-	<style name="regular_text" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_regular</item>
-
-	</style>
-
-	<style name="light_text" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_light</item>
-
 	</style>
 
 
