--- a/app/src/main/res/layout/fragment_auth_flow.xml
+++ b/app/src/main/res/layout/fragment_auth_flow.xml
@@ -1,28 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 31.12.20 15:41
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see https://www.gnu.org/licenses
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
-
-
-<FrameLayout android:id="@+id/authFlowContainer"
-	android:layout_height="match_parent"
-	android:layout_width="match_parent"
+<layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	>
 
 	<fragment android:id="@+id/authHostFragment"
 		android:layout_width="match_parent"
@@ -31,5 +20,4 @@
 		app:navGraph="@navigation/auth_navigation"
 		app:defaultNavHost="true"
 		/>
-
-</FrameLayout>
+</layout>
