--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 31.12.20 16:50
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see https://www.gnu.org/licenses
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
 <layout
@@ -22,14 +14,9 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<data>
-
-		<variable
-			name="isFabVisible"
-			type="Boolean" />
-
-		<variable
-			name="viewModel"
-			type="com.mmdev.roove.ui.profile.RemoteRepoViewModel" />
+		<variable name="viewModel"
+			type="com.mmdev.roove.ui.profile.RemoteRepoViewModel"
+			/>
 
 	</data>
 
@@ -144,7 +131,7 @@
 			android:layout_width="wrap_content"
 			android:layout_margin="16dp"
 			android:src="@drawable/ic_profile_send_message_24dp"
-			app:visibilityGone='@{isFabVisible}'
+			android:visibility="gone"
 
 			app:backgroundTint="@color/amethyst"
 
